--- a/index.html
+++ b/index.html
@@ -155,12 +155,10 @@
       <div class="Maquinaria-layout">
         <div class="Maquinaria-representaciones">
           <p>REPRESENTACIONES</p>
-          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a></div>
+          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselli.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a></div>
         </div>
-        <div class="Maquinaria-fondo">
-          <p class="Maquinaria-fondo_titulo">MAQUINARIA</p>
-          <div class="Maquinaria-fondo_logos"><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselliBlanco.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a></div>
-        </div>
+        <div class="Maquinaria-fondo"></div>
+        <!--	p(class="Maquinaria-fondo_titulo") MAQUINARIA-->
       </div>
       <!-- FOOTER-->
     </div>
