Eliminamos una imagen y la cambiamos por una de viskoteepak

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li>HO.RE.CA</li>
         </ul>
       </div>
-      <div class="Sectores-gallery"><img src="./public/images/carneProcesada.jpg" alt="Carne Procesada" class="Sectores-gallery_img"/></div>
+      <div class="Sectores-gallery"><img src="./public/images/jamon.jpg" alt="Carne Procesada" class="Sectores-gallery_img"/></div>
     </div>
     <!-- SERVICIOS-->
     <div class="Servicios">
@@ -224,3 +224,5 @@
     </div>
   </div>
 </body>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="./public/js/vendor/responsiveslides.min.js"></script>
