agregamos Un Slide con sus archivos

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
 <body>
   <div class="Layout">
     <div class="Header">
-      <div class="Header-nav"><img src="./public/images/logognm.png" alt="" class="Header-nav_logo"/>
-        <ul class="Header-nav_list">
-          <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
-          <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
-          <l1 class="Header-nav_items">SOLUCIONES DE EMBASADO</l1><img src="./public/images/separadores2.png" alt=""/>
-          <l1 class="Header-nav_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
-          <l1 class="Header-nav_items">REPRESENTACIONES	</l1>
+      <div class="container">
+        <div class="Header-nav"><img src="./public/images/logognm.png" alt="" class="Header-nav_logo"/>
+          <ul class="Header-nav_list">
+            <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
+            <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
+            <l1 class="Header-nav_items">SOLUCIONES DE EMBASADO</l1><img src="./public/images/separadores2.png" alt=""/>
+            <l1 class="Header-nav_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
+            <l1 class="Header-nav_items">REPRESENTACIONES	</l1>
+          </ul>
+        </div>
+      </div>
+      <div class="Header-slides">
+        <ul class="rslides">
+          <li><img src="./public/images/slides/01.jpg" alt="Salami" title="Salami"/></li>
+          <li><img src="./public/images/slides/02.jpg"/></li>
+          <li><img src="./public/images/slides/03.jpg"/></li>
+          <li><img src="./public/images/slides/04.jpg"/></li>
         </ul>
       </div>
       <div class="Header-empresas">
@@ -221,8 +231,10 @@
       <div class="Footer-layout_copy">
         <p>Epcys y Nova Meats forman parte del <a href="http://gruponm.com/" class="linkGNM">Grupo NM | </a>Todos los derechos reservados © 2015</p>
       </div>
+      <!-- Script		-->
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="./public/js/vendor/responsiveslides.min.js"></script>
+  <script src="./public/js/slides.js"></script>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="./public/js/vendor/responsiveslides.min.js"></script>
