cambiamos las imagenes de la Gallería y reacomodamos los logos de las representaciones

--- a/index.html
+++ b/index.html
@@ -45,39 +45,44 @@
         </div>
         <div class="wrapper">
           <ul id="sb-slider" class="sb-slider">
-            <li><a href="http://www.flickr.com/photos/strupler/2969141180" target="_blank"><img src="./public/images/1.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/cProcesada.jpg" alt="Carne Procesada"/></a>
               <div class="sb-description">
-                <h3>Creative Lifesaver</h3>
+                <h3>Carne Procesada</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2968268187" target="_blank"><img src="./public/images/2.jpg" alt="image2"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/cFrescas.jpg" alt="Carnes Frescas"/></a>
               <div class="sb-description">
-                <h3>Honest Entertainer</h3>
+                <h3>Carnes Frescas</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2968114825" target="_blank"><img src="./public/images/3.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/aves.jpeg" alt="Aves"/></a>
               <div class="sb-description">
-                <h3>Brave Astronaut</h3>
+                <h3>Aves</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2968122059" target="_blank"><img src="./public/images/4.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/quesosL.jpeg" alt="Quesos y Lácteos"/></a>
               <div class="sb-description">
-                <h3>Affectionate Decision Maker</h3>
+                <h3>Quesos y Lácteos</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2969119944" target="_blank"><img src="./public/images/5.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/pescados.jpeg" alt="Pescados y Mariscos"/></a>
               <div class="sb-description">
-                <h3>Faithful Investor</h3>
+                <h3>Pescados y Mariscos</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2968126177" target="_blank"><img src="./public/images/6.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/frutas.jpeg" alt="Frutas y Vegetales"/></a>
               <div class="sb-description">
-                <h3>Groundbreaking Artist</h3>
+                <h3>Frutas y Vegetales</h3>
               </div>
             </li>
-            <li><a href="http://www.flickr.com/photos/strupler/2968945158" target="_blank"><img src="./public/images/7.jpg" alt="image1"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/liquidos.jpeg" alt="Líquidos"/></a>
               <div class="sb-description">
-                <h3>Selfless Philantropist</h3>
+                <h3>Líquidos</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/horeca.jpg" alt="HO.RE.CA."/></a>
+              <div class="sb-description">
+                <h3>HO.RE.CA.</h3>
               </div>
             </li>
           </ul>
@@ -202,7 +207,7 @@
       <div class="Maquinaria-layout">
         <div class="Maquinaria-representaciones">
           <p>REPRESENTACIONES</p>
-          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://grupofibran.com/fibran/home.php"><img src="./public/images/logoFibran.jpg" alt="Fibran" class="logo-fibran"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselli.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://fatosa.com/"><img src="./public/images/logoFatosa.jpg" alt="Fatosa" class="logo-braher"/></a></div>
+          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://grupofibran.com/fibran/home.php"><img src="./public/images/logoFibran.jpg" alt="Fibran" class="logo-fibran"/></a><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselli.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://fatosa.com/"><img src="./public/images/logoFatosa.jpg" alt="Fatosa" class="logo-braher"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a></div>
         </div>
         <div class="Maquinaria-fondo"></div>
         <!--	p(class="Maquinaria-fondo_titulo") MAQUINARIA-->
