Eliminamos archivos innecesarios

--- a/index.html
+++ b/index.html
@@ -280,5 +280,5 @@
   <script src="./public/js/vendor/responsiveslides.min.js"></script>
   <script src="./public/js/slides.js"></script>
   <script type="text/javascript" src="./public/js/vendor/jquery.slicebox.js"></script>
-  <script src="../DESARROLLO2/public/js/gallery.js"></script>
+  <script src="./public/js/gallery.js"></script>
 </body>
