--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Grupo NM</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" type="text/css" href="./public/css/demo.css"/>
+  <link rel="stylesheet" type="text/css" href="./public/css/slicebox.css"/>
+  <link rel="stylesheet" type="text/css" href="./public/css/custom.css"/>
+  <script type="text/javascript" src="./public/js/vendor/modernizr.custom.46884.js"></script>
   <link rel="stylesheet" href="./public/css/styles.css"/>
 </head>
 <body>
@@ -34,19 +39,56 @@
     </div>
     <!-- SECTORES-->
     <div class="Sectores">
-      <div class="Sectores-titulo">SECTORES QUE SERVIMOS
-        <ul class="Sectores-titulo_list"> 
-          <li>CARNES PROCESADAS</li>
-          <li>CARNES FRESCAS</li>
-          <li>AVES</li>
-          <li>QUESOS Y LACTEOS</li>
-          <li>PESCADOS Y MARISCOS</li>
-          <li>FRUTAS Y VEGETALES</li>
-          <li>LIQUIDOS</li>
-          <li>HO.RE.CA</li>
-        </ul>
+      <div class="containerGal">
+        <div id="nav-dots" class="nav-dots">
+          <div class="Sectores-titulo"> SECTORES QUE SERVIMOS</div><span class="nav-dot-current">CARNE PROCESADA</span><span>CARNES FRESCAS</span><span>AVES</span><span>QUESOS Y LACTEOS</span><span>PESCADOS Y MARISCOS</span><span>FRUTAS Y VEGETALES</span><span>LIQUIDOS</span><span>HO.RE.CA</span>
+        </div>
+        <div class="wrapper">
+          <ul id="sb-slider" class="sb-slider">
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/cProcesada.jpg" alt="Carne Procesada"/></a>
+              <div class="sb-description">
+                <h3>Carne Procesada</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/cFrescas.jpg" alt="Carnes Frescas"/></a>
+              <div class="sb-description">
+                <h3>Carnes Frescas</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/aves.jpeg" alt="Aves"/></a>
+              <div class="sb-description">
+                <h3>Aves</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/quesosL.jpeg" alt="Quesos y Lácteos"/></a>
+              <div class="sb-description">
+                <h3>Quesos y Lácteos</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/pescados.jpeg" alt="Pescados y Mariscos"/></a>
+              <div class="sb-description">
+                <h3>Pescados y Mariscos</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/frutas.jpeg" alt="Frutas y Vegetales"/></a>
+              <div class="sb-description">
+                <h3>Frutas y Vegetales</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/liquidos.jpeg" alt="Líquidos"/></a>
+              <div class="sb-description">
+                <h3>Líquidos</h3>
+              </div>
+            </li>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/horeca.jpg" alt="HO.RE.CA."/></a>
+              <div class="sb-description">
+                <h3>HO.RE.CA.</h3>
+              </div>
+            </li>
+          </ul>
+          <div id="shadow" class="shadow"></div>
+        </div>
       </div>
-      <div class="Sectores-gallery"><img src="./public/images/jamon.jpg" alt="Carne Procesada" class="Sectores-gallery_img"/></div>
     </div>
     <!-- SERVICIOS-->
     <div class="Servicios">
@@ -165,7 +207,7 @@
       <div class="Maquinaria-layout">
         <div class="Maquinaria-representaciones">
           <p>REPRESENTACIONES</p>
-          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://grupofibran.com/fibran/home.php"><img src="./public/images/logoFibran.jpg" alt="Fibran" class="logo-fibran"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselli.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://fatosa.com/"><img src="./public/images/logoFatosa.jpg" alt="Fatosa" class="logo-braher"/></a></div>
+          <div class="Maquinaria-representaciones_logos"><a href="http://www.viskoteepak.com/"><img src="./public/svg/logoVisko.svg" alt="Viskoteepak" class="logo-visko"/></a><a href="http://190.107.176.73/~prodinwe/www/"><img src="./public/svg/logoInsuban.svg" alt="Insuban" class="logo-insuban"/></a><a href="http://www.valfilm.com.br/?language=es"><img src="./public/svg/logoValfilm.svg" alt="Valfilm" class="logo-valfilm"/></a><a href="http://grupofibran.com/fibran/home.php"><img src="./public/images/logoFibran.jpg" alt="Fibran" class="logo-fibran"/></a><a href="http://www.grasselli.com/es"><img src="./public/svg/logoGrasselli.svg" alt="Grasselli" class="logo-grasselli"/></a><a href="http://www.edicas.es/Inici"><img src="./public/svg/logoEdicas.svg" alt="Edicas" class="logo-edicas"/></a><a href="http://www.medocsa.com/"><img src="./public/images/logoMedoc.jpg" alt="Medoc" class="logo-medoc"/></a><a href="http://fatosa.com/"><img src="./public/images/logoFatosa.jpg" alt="Fatosa" class="logo-braher"/></a><a href="http://www.braher.com/"><img src="./public/images/logoBraher.png" alt="Braher" class="logo-braher"/></a></div>
         </div>
         <div class="Maquinaria-fondo"></div>
         <!--	p(class="Maquinaria-fondo_titulo") MAQUINARIA-->
@@ -237,4 +279,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="./public/js/vendor/responsiveslides.min.js"></script>
   <script src="./public/js/slides.js"></script>
+  <script type="text/javascript" src="./public/js/vendor/jquery.slicebox.js"></script>
+  <script src="./public/js/gallery.js"></script>
 </body>
