cambio de imagen en pescados y mariscos

--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
                 <h3>Carnes Frescas</h3>
               </div>
             </li>
-            <li><a href="#" target="_blank"><img src="./public/images/gallery/aves.jpeg" alt="Aves"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/aves.jpg" alt="Aves"/></a>
               <div class="sb-description">
                 <h3>Aves</h3>
               </div>
             </li>
-            <li><a href="#" target="_blank"><img src="./public/images/gallery/quesosL.jpeg" alt="Quesos y Lácteos"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/quesosL.jpg" alt="Quesos y Lácteos"/></a>
               <div class="sb-description">
                 <h3>Quesos y Lácteos</h3>
               </div>
             </li>
-            <li><a href="#" target="_blank"><img src="./public/images/gallery/pescados.jpeg" alt="Pescados y Mariscos"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/pescado2.jpg" alt="Pescados y Mariscos"/></a>
               <div class="sb-description">
                 <h3>Pescados y Mariscos</h3>
               </div>
             </li>
-            <li><a href="#" target="_blank"><img src="./public/images/gallery/frutas.jpeg" alt="Frutas y Vegetales"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/frutas.jpg" alt="Frutas y Vegetales"/></a>
               <div class="sb-description">
                 <h3>Frutas y Vegetales</h3>
               </div>
             </li>
-            <li><a href="#" target="_blank"><img src="./public/images/gallery/liquidos.jpeg" alt="Líquidos"/></a>
+            <li><a href="#" target="_blank"><img src="./public/images/gallery/liquidos.jpg" alt="Líquidos"/></a>
               <div class="sb-description">
                 <h3>Líquidos</h3>
               </div>
