enlazamos el home con embasados

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="Header-nav_list">
             <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
             <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
-            <l1 class="Header-nav_items">SOLUCIONES DE EMBASADO</l1><img src="./public/images/separadores2.png" alt=""/>
+            <l1 class="Header-nav_items"><a href="embasado.html">SOLUCIONES DE EMBASADO</a></l1><img src="./public/images/separadores2.png" alt=""/>
             <l1 class="Header-nav_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
             <l1 class="Header-nav_items">REPRESENTACIONES	</l1>
           </ul>
