--- a/embasado.html
+++ b/embasado.html
@@ -16,10 +16,44 @@
       <ul class="Main-menu_list">
         <l1 class="menu_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
         <l1 class="menu_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="menu_items">SOLUCIONES DE EMBASADO</l1><img src="./public/images/separadores2.png" alt=""/>
+        <l1 class="Header-nav_items"><a href="embasado.html">SOLUCIONES DE EMBASADO</a></l1><img src="./public/images/separadores2.png" alt=""/>
         <l1 class="menu_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="menu_items">REPRESENTACIONES	</l1>
+        <l1 class="menu_items">REPRESENTACIONES</l1>
+        <!-- ENCABEZADO-->
       </ul>
+    </div>
+    <div class="Encabezado">
+      <h2>SOLUCIONES DE <br>EMBASADO</h2>
+    </div>
+    <div class="Embasado">
+      <div class="Embasado-list">
+        <ul>
+          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES ( PVDC ) 56 MICRONES</a></li>
+          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES ( PVDC ) 76 MICRONES</a></li>
+          <li><a class="Embasado-list_link">BOLSAS NYLON POLY ( TRES SELLOS )</a></li>
+          <li><a class="Embasado-list_link">PELICULA EVOH </a></li>
+          <li><a class="Embasado-list_link">TRIPA CELULOSA  ( SALCHICHAS ) WIENIEPAK</a></li>
+          <li><a class="Embasado-list_link">TRIPA FIBROSA ( SALAMES )</a></li>
+          <li><a class="Embasado-list_link">TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA</a></li>
+          <li><a class="Embasado-list_link">TRIPA NATURAL DE CERDO</a></li>
+          <li><a class="Embasado-list_link">TRIPA NATURAL DE CORDERO</a></li>
+          <li><a class="Embasado-list_link">TRIPA COLAGENO COMESTIBLE									</a></li>
+        </ul>
+      </div>
+      <div class="Embasado-info">
+        <h1>TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA</h1>
+        <ul>
+          <li>CALIBRES DESDE 51 - 305 ANCHO PLANO</li>
+          <li>CALIBRES DESDE 34 - 205 DRE</li>
+          <li>VARIOS COLORES</li>
+          <li>DRE DIAMETRO RECOMENDADO EMBUTIDO</li>
+        </ul>
+      </div>
+    </div>
+    <div class="Maquinaria">
+      <h2>MAQUINARIA</h2>
+      <div class="Maquinaria-list"></div>
+      <div class="Maquinaria-gallery"></div>
       <!-- FOOTER-->
     </div>
     <div class="Footer">
