Agregamos bootstrap y arreglamos el main menu

--- a/embasado.html
+++ b/embasado.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./public/css/custom.css"/>
   <script type="text/javascript" src="./public/js/vendor/modernizr.custom.46884.js"></script>
   <link rel="stylesheet" href="./public/css/styles.css"/>
+  <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
   <div class="Total">
@@ -23,25 +24,25 @@
       </ul>
     </div>
     <div class="Encabezado">
-      <h2>SOLUCIONES DE <br>EMBASADO</h2>
+      <h2>SOLUCIONES DE<br>EMBASADO</h2>
     </div>
     <div class="Embasado">
       <div class="Embasado-list">
         <ul>
-          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES ( PVDC ) 56 MICRONES</a></li>
-          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES ( PVDC ) 76 MICRONES</a></li>
-          <li><a class="Embasado-list_link">BOLSAS NYLON POLY ( TRES SELLOS )</a></li>
+          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES</a></li>
+          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES</a></li>
+          <li><a class="Embasado-list_link">BOLSAS NYLON POLY (TRES SELLOS)</a></li>
           <li><a class="Embasado-list_link">PELICULA EVOH </a></li>
-          <li><a class="Embasado-list_link">TRIPA CELULOSA  ( SALCHICHAS ) WIENIEPAK</a></li>
-          <li><a class="Embasado-list_link">TRIPA FIBROSA ( SALAMES )</a></li>
-          <li><a class="Embasado-list_link">TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA</a></li>
+          <li><a class="Embasado-list_link">TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK</a></li>
+          <li><a class="Embasado-list_link">TRIPA FIBROSA (SALAMES)</a></li>
+          <li><a class="Embasado-list_link">TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</a></li>
           <li><a class="Embasado-list_link">TRIPA NATURAL DE CERDO</a></li>
           <li><a class="Embasado-list_link">TRIPA NATURAL DE CORDERO</a></li>
           <li><a class="Embasado-list_link">TRIPA COLAGENO COMESTIBLE									</a></li>
         </ul>
       </div>
       <div class="Embasado-info">
-        <h1>TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA</h1>
+        <h1>TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</h1>
         <ul>
           <li>CALIBRES DESDE 51 - 305 ANCHO PLANO</li>
           <li>CALIBRES DESDE 34 - 205 DRE</li>
@@ -53,7 +54,7 @@
     <div class="Maquinaria">
       <h2>MAQUINARIA</h2>
       <div class="Maquinaria-list"></div>
-      <div class="Maquinaria-gallery"></div>
+      <div class="Maquinaria-gallery"><img id="" src="./public/images/maquinaria/c35.png" class="Maquinaria-gallery_items"/></div>
       <!-- FOOTER-->
     </div>
     <div class="Footer">
