Soluciones de embasado programado en datos.js

--- a/embasado.html
+++ b/embasado.html
@@ -29,26 +29,48 @@
     <div class="Embasado">
       <div class="Embasado-list">
         <ul>
-          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES</a></li>
-          <li><a class="Embasado-list_link">BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES</a></li>
-          <li><a class="Embasado-list_link">BOLSAS NYLON POLY (TRES SELLOS)</a></li>
-          <li><a class="Embasado-list_link">PELICULA EVOH </a></li>
-          <li><a class="Embasado-list_link">TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK</a></li>
-          <li><a class="Embasado-list_link">TRIPA FIBROSA (SALAMES)</a></li>
-          <li><a class="Embasado-list_link">TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</a></li>
-          <li><a class="Embasado-list_link">TRIPA NATURAL DE CERDO</a></li>
-          <li><a class="Embasado-list_link">TRIPA NATURAL DE CORDERO</a></li>
-          <li><a class="Embasado-list_link">TRIPA COLAGENO COMESTIBLE									</a></li>
+          <li>
+            <button id="idtitulos" class="Embasado-list_button">BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES</button>
+          </li>
+          <li>
+            <button id="termo76" class="Embasado-list_button">BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES</button>
+          </li>
+          <li>
+            <button id="nylon" class="Embasado-list_button">BOLSAS NYLON POLY (TRES SELLOS)</button>
+          </li>
+          <li>
+            <button id="evoh" class="Embasado-list_button">PELICULA EVOH </button>
+          </li>
+          <li>
+            <button id="celulosa" class="Embasado-list_button">TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK</button>
+          </li>
+          <li>
+            <button id="salames" class="Embasado-list_button">TRIPA FIBROSA (SALAMES)</button>
+          </li>
+          <li>
+            <button id="polyamida" class="Embasado-list_button">TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</button>
+          </li>
+          <li class="liopciones">
+            <p class="Embasado-list_button">TRIPA NATURAL DE CERDO</p>
+            <ul>
+              <li id="cerdo1" class="Embasado-list_button">MADEJAS DE 10, 15 Y 22 PUNTAS</li>
+              <li id="cerdo2" class="Embasado-list_button">TUBING  DE  7, 10, 12 PUNTAS</li>
+            </ul>
+          </li>
+          <li class="liopciones">
+            <p class="Embasado-list_button">TRIPA NATURAL DE CORDERO</p>
+            <ul>
+              <li id="cordero" class="Embasado-list_button">MADEJAS</li>
+            </ul>
+          </li>
+          <li>
+            <button id="colageno" class="Embasado-list_button">TRIPA COLAGENO COMESTIBLE									</button>
+          </li>
         </ul>
       </div>
       <div class="Embasado-info">
-        <h1>TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</h1>
-        <ul>
-          <li>CALIBRES DESDE 51 - 305 ANCHO PLANO</li>
-          <li>CALIBRES DESDE 34 - 205 DRE</li>
-          <li>VARIOS COLORES</li>
-          <li>DRE DIAMETRO RECOMENDADO EMBUTIDO</li>
-        </ul>
+        <h1 id="titulazo">TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</h1>
+        <p id="variantes">Datos de prueba</p>
       </div>
     </div>
     <div class="Maquinaria">
@@ -249,4 +271,5 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="./public/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./public/js/datos.js"></script>
 </body>
