cambio de tamaño en pagina de embasados y mejor alinemamiento

--- a/embasado.html
+++ b/embasado.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="Total">
-    <div class="Main-menu"><img src="./public/svg/logoGNM.svg" alt="" class="Main-menu_logoB"/>
+    <div class="Main-menu"><a href="index.html"><img src="./public/svg/logoGNM.svg" alt="" class="Main-menu_logoB"/></a>
       <ul class="Main-menu_list">
         <l1 class="menu_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
         <l1 class="menu_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
