--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="Layout">
     <div class="Header">
       <div class="container">
-        <div class="Header-nav"><img src="./public/images/logognm.png" alt="" class="Header-nav_logo"/>
+        <div class="Header-nav"><a href="index.html"><img src="./public/images/logognm.png" alt="" class="Header-nav_logo"/></a>
           <ul class="Header-nav_list">
             <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
             <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
@@ -118,87 +118,6 @@
           <div class="Servicios-circulos">
             <h2 class="h2-abajo">CAPACITACIONES Y CURSOS</h2>
           </div>
-        </div>
-      </div>
-    </div>
-    <!-- EMBASADO-->
-    <div class="Embasado">
-      <h2 class="Embasado-titulo">SOLUCIONES DE EMBASADO</h2>
-      <div class="Embasado-layout">
-        <div class="Embasado-colIzq">
-          <h3>BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES</h3>
-          <ul>
-            <li>SB15 CARNES PROCESADAS (ALTA BARRERA)</li>
-            <li>SB15 CARNES FRESCAS (ALTA BARRERA)</li>
-            <li>SB 3000  PAVOS Y POLLOS FRESCO Y COGELADOS (SIN BARRERA)</li>
-            <li>SB100 QUESOS FRESCO  (MEDIA BARRERA)</li>
-            <li>IMPRESIÓN HASTA 8 COLORES X LADO</li>
-            <li>SELLO REDONDO</li>
-            <li>VARIOS COLORES</li>
-          </ul>
-          <h3>BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES</h3>
-          <ul> 
-            <li>SB15 PRO TITE CORTES CON HUESO (ALTA BARRERA)</li>
-          </ul>
-          <h3>BOLSAS NYLON POLY (TRES SELLOS)</h3>
-          <ul> 
-            <li>BOLSAS DESDE 50  - 120 MICRONES</li>
-          </ul>
-          <h3>PELICULA EVOH </h3>
-          <ul>
-            <li>BOLSA UHT (LECHES)</li>
-            <li>MATERIAL LARGA VIDA</li>
-          </ul>
-          <h3>TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK</h3>
-          <ul>
-            <li>CALIBRES DESDE 13 - 40</li>
-            <li>REGULAR, IMPRESA, FACIL PELADO Y GRILL SMASH</li>
-          </ul>
-          <h3>TRIPA FIBROSA (SALAMES)</h3>
-          <ul>
-            <li>CALIBRE DESDE 28 - 252 DRE</li>
-            <li>FACIL PELADO, REGULAR Y ALTA ADEHESION</li>
-            <li>VARIOS COLORES</li>
-          </ul>
-        </div>
-        <!-- COLUMNA DERECHA-->
-        <div class="Embasado-colDer">
-          <h3>TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA</h3>
-          <ul>
-            <li>CALIBRES DESDE 51 - 305 ANCHO PLANO</li>
-            <li>CALIBRES DESDE 34 - 205 DRE</li>
-            <li>VARIOS COLORES</li>
-            <li>DRE DIAMETRO RECOMENDADO EMBUTIDO</li>
-          </ul>
-          <h3>TRIPA NATURAL DE CERDO</h3>
-          <p id="Embasado-colDer_subtitulo">MADEJAS DE 10, 15 Y 22 PUNTAS</p>
-          <ul> 
-            <li>30-32</li>
-            <li>32-35</li>
-            <li>35-37</li>
-            <li>37-40</li>
-          </ul>
-          <p id="Embasado-colDer_subtitulo">TUBING  DE  7, 10, 12 PUNTAS</p>
-          <ul> 
-            <li>32-35</li>
-            <li>35-39</li>
-            <li>40+</li>
-          </ul>
-          <h3>TRIPA NATURAL DE CORDERO</h3>
-          <p id="Embasado-colDer_subtitulo">MADEJAS</p>
-          <ul>
-            <li>14-16</li>
-            <li>16-18</li>
-            <li>18-20</li>
-            <li>20-22</li>
-            <li>22-24</li>
-            <li>24-26</li>
-          </ul>
-          <h3>TRIPA COLAGENO COMESTIBLE</h3>
-          <ul>
-            <li>CALIBRE DESDE 17- 38</li>
-            <li>VARIOS COLORES</li>
-          </ul>
         </div>
       </div>
     </div>
