--- a/embasado.html
+++ b/embasado.html
@@ -14,12 +14,12 @@
 <body>
   <div class="Total">
     <div class="Main-menu"><a href="index.html"><img src="./public/svg/logoGNM.svg" alt="" class="Main-menu_logoB"/></a>
-      <ul class="Main-menu_list">
-        <l1 class="menu_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="menu_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="Header-nav_items"><a href="embasado.html">SOLUCIONES DE EMBASADO</a></l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="menu_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
-        <l1 class="menu_items">REPRESENTACIONES</l1>
+      <ul class="Main-menu_list"><a href="index.html#sectores">
+          <l1 class="menu_items">SECTORES QUE SERVIMOS</l1></a><img src="./public/images/separadores2.png" alt=""/><a href="index.html#servicios">
+          <l1 class="menu_items">NUESTROS SERVICIOS</l1></a><img src="./public/images/separadores2.png" alt=""/>
+        <l1 class="Header-nav_items"><a href="embasado.html">SOLUCIONES DE EMBASADO</a></l1><img src="./public/images/separadores2.png" alt=""/><a href="#maquinaria">
+          <l1 class="menu_items">MAQUINARIA</l1></a><img src="./public/images/separadores2.png" alt=""/><a href="index.html#representaciones">
+          <l1 class="menu_items">REPRESENTACIONES</l1></a>
         <!-- ENCABEZADO-->
       </ul>
     </div>
@@ -73,7 +73,7 @@
         <p id="variantes">Datos de prueba</p>
       </div>
     </div>
-    <div class="Maquinaria">
+    <div id="maquinaria" class="Maquinaria">
       <h2>MAQUINARIA</h2>
       <div id="accordion" role="tablist" aria-multiselectable="true" class="Maquinaria-list panel-group">
         <div class="panel panel-default">
