--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <div class="Header">
       <div class="container">
         <div class="Header-nav"><a href="index.html"><img src="./public/images/logognm.png" alt="" class="Header-nav_logo"/></a>
-          <ul class="Header-nav_list">
-            <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1><img src="./public/images/separadores2.png" alt=""/>
-            <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1><img src="./public/images/separadores2.png" alt=""/>
-            <l1 class="Header-nav_items"><a href="embasado.html">SOLUCIONES DE EMBASADO</a></l1><img src="./public/images/separadores2.png" alt=""/>
-            <l1 class="Header-nav_items">MAQUINARIA</l1><img src="./public/images/separadores2.png" alt=""/>
-            <l1 class="Header-nav_items">REPRESENTACIONES	</l1>
-          </ul>
+          <ul class="Header-nav_list"><a href="#sectores">
+              <l1 class="Header-nav_items">SECTORES QUE SERVIMOS</l1></a><img src="./public/images/separadores2.png" alt=""/><a href="#servicios">
+              <l1 class="Header-nav_items">NUESTROS SERVICIOS</l1></a><img src="./public/images/separadores2.png" alt=""/><a href="embasado.html">SOLUCIONES DE EMBASADO
+              <l1 class="Header-nav_items"></l1></a><img src="./public/images/separadores2.png" alt=""/><a href="embasado.html#maquinaria">
+              <l1 class="Header-nav_items">MAQUINARIA</l1></a><img src="./public/images/separadores2.png" alt=""/><a href="#representaciones">
+              <l1 class="Header-nav_items">REPRESENTACIONES</l1></a></ul>
         </div>
       </div>
       <div class="Header-slides">
@@ -38,7 +37,7 @@
       </div>
     </div>
     <!-- SECTORES-->
-    <div class="Sectores">
+    <div id="sectores" class="Sectores">
       <div class="containerGal">
         <div id="nav-dots" class="nav-dots">
           <div class="Sectores-titulo"> SECTORES QUE SERVIMOS</div><span class="nav-dot-current">CARNE PROCESADA</span><span>CARNES FRESCAS</span><span>AVES</span><span>QUESOS Y LACTEOS</span><span>PESCADOS Y MARISCOS</span><span>FRUTAS Y VEGETALES</span><span>LIQUIDOS</span><span>HO.RE.CA</span>
@@ -91,7 +90,7 @@
       </div>
     </div>
     <!-- SERVICIOS-->
-    <div class="Servicios">
+    <div id="servicios" class="Servicios">
       <p class="Servicios-titulo">NUESTROS SERVICIOS</p>
       <div class="Contenedor-circulos">
         <div class="Contenedor-circulos_arriba">
@@ -122,7 +121,7 @@
       </div>
     </div>
     <!-- MAQUINARIA-->
-    <div class="Maquinaria">
+    <div id="representaciones" class="Maquinaria">
       <div class="Maquinaria-layout">
         <div class="Maquinaria-representaciones">
           <p>REPRESENTACIONES</p>
